added about section

--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -48,6 +48,7 @@ nav a{
     font-weight: 800;
 }
 
+
 /* shared style */
 .primary-btn{
     font-size: 20px;
@@ -64,9 +65,23 @@ nav a{
     color:#FD6E0A;
 }
 
+.section-heading{
+    max-width: 827px;
+}
 
-
-
+.title{
+    color:#181818;
+    font-size: 35px;
+    font-weight: bold;
+    margin-bottom: 30px;
+}
+.sub-title{
+    color:#757575;
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 30px;
+    margin-bottom: 30px;
+}
 
 /* hero section */
 #banner-container{
@@ -107,4 +122,40 @@ nav a{
 
 #banner-container figure img{
     vertical-align: bottom;
+}
+
+/* main part  */
+
+main{
+    width:71%;
+    max-width:1140px;
+    margin: 0 auto;
+}
+
+/* about section */
+.about{
+    margin:130px 0;
+}
+
+.about-container{
+    background-color: #FFF8F3;
+    text-align: center;
+    padding: 130px 156px;
+    border-radius: 16px;
+}
+.about-info{
+    display: flex;
+    justify-content: space-around;
+}
+
+.info-card p{
+    color:#757575;
+    font-size: 20px;
+    line-height: 30px;
+}
+.info-card h5{
+    color:#474747;
+    font-size: 20px;
+    font-weight: bold;
+    line-height: 30px;
 }
