--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -67,6 +67,9 @@ nav a{
 
 .section-heading{
     max-width: 827px;
+    margin:0 auto;
+    text-align: center;
+    
 }
 
 .title{
@@ -74,6 +77,7 @@ nav a{
     font-size: 35px;
     font-weight: bold;
     margin-bottom: 30px;
+   
 }
 .sub-title{
     color:#757575;
@@ -81,6 +85,7 @@ nav a{
     font-size: 18px;
     line-height: 30px;
     margin-bottom: 30px;
+    
 }
 
 /* hero section */
@@ -133,7 +138,7 @@ main{
 }
 
 /* about section */
-.about{
+#about{
     margin:130px 0;
 }
 
@@ -158,4 +163,46 @@ main{
     font-size: 20px;
     font-weight: bold;
     line-height: 30px;
+}
+
+/* skills section */
+#skills{
+   margin: 130px 0 ;
+    
+}
+.skills-container{
+    text-align: center;
+}
+
+.skills-content{
+    display: flex;
+    gap:24px;
+    margin-top: 50px;
+}
+.skill-card{
+    padding: 30px;
+    box-shadow: 0 6px 50px 0 rgba(0,0,0,0.06);
+    text-align: left;
+    box-sizing: border-box;
+   
+}
+.skill-card img{
+    margin-bottom: 30px;
+}
+.skill-card h3{
+    margin-bottom: 20px;
+    font-size: 20px;
+    font-weight: bold;
+    color:#181818;
+}
+.skill-card p{
+    color:#757575;
+    line-height: 28px;
+}
+
+
+
+/* resume section */
+.resume{
+    margin: 130px 0;
 }
