--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -206,3 +206,44 @@ main{
 .resume{
     margin: 130px 0;
 }
+.resume .title{
+    margin-bottom: 110px;
+}
+
+.resume-container{
+    display: flex;
+    gap:24px;
+}
+
+
+.education-title,.experience-title{
+    font-size: 30px;
+    font-weight: bold;
+    color:#474747;
+}
+
+.resume-card{
+    margin:30px 47px 30px 0;
+}
+
+.card-title{
+    font-size: 25px;
+    font-weight: bold;
+    color: #474747;
+    margin-bottom: 10px;
+}
+.card-info{
+    font-size: 20px;
+    font-weight: 600;
+    color:#757575;
+    margin-bottom: 20px;
+}
+.card-text{
+    color: #757575;
+    line-height: 28px;
+}
+
+.resume-btn{
+   text-align: center;
+   margin-top: 50px;
+}
